# Foundry

./: dar_es_salaam.ifc  dar_es_salaam_building_spec.json  dar_es_salaam_v2.ifc  main.py  migrate_to_src.sh  prompts.txt  pyproject.toml
src/foundry/ai_engine/: gem.py
src/foundry/config/: settings.py
src/foundry/data_pipeline/: orchestrator.py
src/foundry/data_pipeline/fetchers/: climate.py  disasters.py  elevation.py  geocoding.py  openstreetmap.py  soil.py
tests/: test_climate.py  test_disasters.py  test_elevation.py  test_geocoding.py  test_ifc_generator.py  test_openstreetmap.py  test_orchestrator.py  test_soil.py  test_spec_generator.py
