[project]
name = "foundry"
version = "0.1.0"
description = "Geo Planning System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.7.12",
    "googlemaps>=4.10.0",
    "owslib>=0.35.0",
    "pydantic-settings>=2.12.0",
    "rasterio>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
