[project]
name = "foundry"
version = "0.1.0"
description = "Geo Planning System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.79.0",
    "earthengine-api>=1.7.12",
    "google-genai>=1.62.0",
    "googlemaps>=4.10.0",
    "ifcopenshell>=0.8.4.post1",
    "numpy>=2.4.2",
    "owslib>=0.35.0",
    "pillow>=12.1.0",
    "pydantic-settings>=2.12.0",
    "rasterio>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
